2002-06-11  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.texi (Tests): Document site.exp.  Update DejaGnu's url.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/header-vars.am (transform): Define.
	Was removed by mistake on 2002-04-13.
	* tests/transform.test: New file.
	* tests/Makefile.am (TESTS): Add transform.test.
	Reported by Nicolas Joly.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/dollar.test: Require GNU make.
	* tests/maintclean.test: Don't use `export YACC=false'.  Pass
	YACC=false to configure instead.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/config.guess, lib/config.sub, lib/texinfo.tex, lib/INSTALL,
	INSTALL: New upstream versions.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/sinclude.test: Check for m4_include too.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/sinclude.test: Rename the package as amsinclude;
	am__sinclude still trigers the sinclude macro once it has been
	converted to am--sinclude.
	Reported by Nicolas Joly.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.texi (API versioning): Typo.

2002-06-10  Nicolas Joly  <njoly@pasteur.fr>

	* THANKS (Nicolas Joly): Remove duplicate.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* Makefile.am (maintainer-check): Fix $MAKE -e detection.
	* tests/yacc7.test: Use rm -f.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/defs (ACLOCAL, AUTOMAKE): Use absolute paths.
	* tests/subpkg.test: New file.
	* tests/Makefile.am (TESTS): Add subpkg.test.

2002-06-09  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/318:
	* tests/nobase.test: Rewrite to test _HEADERS, _DATA, _SCRIPTS,
	_PROGRAMS, _LIBRARIES, and _LTLIBRARIES.
	* lib/am/scripts.am (install-%DIR%SCRIPTS,
	uninstall-%DIR%SCRIPTS): Honor nobase_; strip the directory by
	default.
	(?%DIR%SCRIPT_INSTALL): New variable.
	* lib/am/header-vars.am (install_sh_SCRIPT): New variable.