@@ -20,7 +20,7 @@ Arkadiusz Miskiewicz	misiek@pld.ORG.PL
 Assar Westerlund	assar@sics.se
 Axel Belinfante		Axel.Belinfante@cs.utwente.nl
 Bernard Urban		Bernard.Urban@meteo.fr
-Bernd Jendrissek	berndj@prism.co.za
+Bernd Jendrissek	berndfoobar@users.sourceforge.net
 Bill Currie		bcurrie@tssc.co.nz
 Bill Davidson		bill@kayhay.com
 Bill Fenner		fenner@parc.xerox.com
