@@ -27,7 +27,12 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE
 
-test -d autom4te.cache
+# autom4te.cache appears with Autoconf >= 2.53.
+if test -d autom4te.cache; then
+  test_cache='test -d autom4te.cache'
+else
+  test_cache=:
+fi
 
 # Since we don't require Yacc, make sure it's not used.
 ./configure YACC=false
@@ -41,7 +46,7 @@ test ! -f bar
 test ! -f Makefile
 test ! -f config.status
 test -f foo.c
-test -d autom4te.cache
+$test_cache
 
 ./configure
 test -f bar
