@@ -1,5 +1,11 @@
 2002-06-11  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* tests/maintclean.test: Don't check for autom4te.cache if
+	it's not created by Autoconf.
+	Reported by Bernd Jendrissek.
+
+2002-06-11  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	* automake.texi (Tests): Document site.exp.  Update DejaGnu's url.
 
 2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>
